--- a/OnlineMusicProject/OnlineMusicProject/Views/Genres/Index.cshtml
+++ b/OnlineMusicProject/OnlineMusicProject/Views/Genres/Index.cshtml
@@ -4,32 +4,31 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+
+<div class="row">
+    <div class="col-md-6">
+        <h2 class="py-2">Genres</h2>
+        <a class="btn btn-primary text-dark" asp-action="Create">+ Create Genre</a>
+    </div>
+</div>
+
+<div class="row mt-4">
+    @foreach (var item in Model)
+    {
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">@Html.DisplayFor(modelItem => item.Name)</h5>
+                    <div class="d-flex">
+
+
+                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-secondary">✎</a>
+                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">🗑</a>
+                       
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
+</div>
