--- a/OnlineMusicProject/OnlineMusicProject/Views/Home/Index.cshtml
+++ b/OnlineMusicProject/OnlineMusicProject/Views/Home/Index.cshtml
@@ -1,8 +1,42 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿<!DOCTYPE html>
+<html>
+<head>
+	<title>View with Heading and Image</title>
+	<style type="text/css">
+		.container-local {
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			height:70vh;
+		}
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+		.heading-local {
+			flex-grow: 1;
+			text-align:center;
+			font-size: 36px;
+			font-weight: bold;
+			padding: 20px;
+		}
+
+		.image {
+			flex-grow: 1;
+			text-align: center;
+		}
+
+			.image img {
+				max-width: 100%;
+				max-height: 100%;
+			}
+	</style>
+</head>
+<body>
+	<div class="container-local">
+		<div class="heading-local">
+			Musically.
+		
+			<a class="btn" asp-area="" asp-controller="Songs" asp-action="Index">Explore now</a>
+
+		</div>
+	</div>
+</body>
+</html>
