--- a/OnlineMusicProject/OnlineMusicProject/Views/Shared/_Layout.cshtml
+++ b/OnlineMusicProject/OnlineMusicProject/Views/Shared/_Layout.cshtml
@@ -27,7 +27,10 @@
                                 <a class="nav-link text-light" asp-area="" asp-controller="Songs" asp-action="Index">Songs</a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Genres" asp-action="Index">Genres</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Genres" asp-action="Index">Genres</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Users">Users</a>
                             </li>
                         }
                         
