--- a/OnlineMusicProject/OnlineMusicProject/wwwroot/css/site.css
+++ b/OnlineMusicProject/OnlineMusicProject/wwwroot/css/site.css
@@ -35,7 +35,7 @@ body {
     background-color: #343a40!important;
     border:none;
     color: var(--text-color);
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 a {
