--- a/MobileRecharge/MobileRecharge/Views/Shared/_Layout.cshtml
+++ b/MobileRecharge/MobileRecharge/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -18,15 +22,28 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+               
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                    @if (SignInManager.IsSignedIn(User))
+                    {
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark pay-link" asp-area="" asp-controller="MobilePlans" asp-action="Index">Mobile Plans</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                        @if (User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark recharge-link" asp-area="" asp-controller="Recharges" asp-action="Index">Recharge Histories</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark recharge-link" asp-area="" asp-controller="Recharges" asp-action="MyRecharges">My History</a>
+                            </li>
+                        }
                     </ul>
+                    }
                     <partial name="_LoginPartial" />
                 </div>
             </div>
