added admin controls UI

--- a/MobileRechargeAppIndividual/MobileRecharge/Views/MobilePlans/Index.cshtml
+++ b/MobileRechargeAppIndividual/MobileRecharge/Views/MobilePlans/Index.cshtml
@@ -6,10 +6,18 @@
 
 
 
-<h1>Index</h1>
+@if (User.IsInRole("Admin"))
+{
+    <h1 class="mt-3">Admin Controls</h1>
+}
+else
+{
+    <h1 class="mt-3">User Plans</h1>
+
+}
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary">+ Create Plan</a>
 </p>
 <table class="table">
     <thead>
@@ -53,13 +61,13 @@
 
             <td>
                 @if (User.IsInRole("Admin")) {
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                    <a asp-action = "Details" asp-route-id = "@item.Id"> Details </a> 
-                    <a asp-action = "Delete" asp-route-id = "@item.Id"> Delete </a>
+                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary">Edit</a>
+@*                    <a asp-action = "Details" asp-route-id = "@item.Id"> Details </a>
+                *@                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger"> Delete </a>
                 }
                 else{
                     <form method="post" asp-controller="MobilePlans" asp-action="Index" asp-route-id="@item.Id">
-                        <button type="submit">Recharge</button>
+                        <button type="submit" class="btn btn-primary">Recharge</button>
                     </form>
                 }
             </td>
