--- a/MobileRechargeAppIndividual/MobileRecharge/Views/MobilePlans/Create.cshtml
+++ b/MobileRechargeAppIndividual/MobileRecharge/Views/MobilePlans/Create.cshtml
@@ -4,49 +4,48 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
 
-<h4>MobilePlan</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <h2 class="mt-3">Create MobilePlan</h2>
+        <hr />
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group my-1">
                 <label asp-for="ServiceProvider" class="control-label"></label>
                 <input asp-for="ServiceProvider" class="form-control" />
                 <span asp-validation-for="ServiceProvider" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group my-1">
                 <label asp-for="PlanName" class="control-label"></label>
                 <input asp-for="PlanName" class="form-control" />
                 <span asp-validation-for="PlanName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group my-1" >
                 <label asp-for="Mode" class="control-label"></label>
                 <input asp-for="Mode" class="form-control" />
                 <span asp-validation-for="Mode" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group my-1 " >
                 <label asp-for="NoOfMonths" class="control-label"></label>
                 <input asp-for="NoOfMonths" class="form-control" />
                 <span asp-validation-for="NoOfMonths" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group my-1" >
                 <label asp-for="Amount" class="control-label"></label>
                 <input asp-for="Amount" class="form-control" />
                 <span asp-validation-for="Amount" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group my-2 justify-content-between">
+                <input type="submit" value="Create" class="btn btn-primary" /> <a asp-action="Index">Back to List</a>
             </div>
+           
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
