--- a/MobileRechargeAppIndividual/MobileRecharge/Views/MobilePlans/Delete.cshtml
+++ b/MobileRechargeAppIndividual/MobileRecharge/Views/MobilePlans/Delete.cshtml
@@ -6,9 +6,10 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>MobilePlan</h4>
+<div class="row justify-content-center">
+<div class="col-md-9">
+    <h3>Are you sure you want to delete this?</h3>
+
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -48,4 +49,5 @@
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
+</div>
 </div>
