--- a/MobileRechargeAppIndividual/MobileRecharge/Views/MobilePlans/SendMail.cshtml
+++ b/MobileRechargeAppIndividual/MobileRecharge/Views/MobilePlans/SendMail.cshtml
@@ -1,6 +1,6 @@
 ﻿@model EnquiryMail
 
-<h2>Enquiry Mail</h2>
+
 
 @if (ViewBag.Message != null)
 {
@@ -9,16 +9,22 @@
     </div>
 }
 
+<div class="row justify-content-center">
+<div class="col-md-4">
+        <h2 class="mt-5">Contact Us</h2>
+        <hr />
 <form asp-action="SendMail" method="post">
-    <div class="form-group">
+    <div class="form-group my-3">
         <label for="subject">Subject</label>
         <input type="text" class="form-control" id="subject" name="Subject" value="@Model.Subject">
         <span asp-validation-for="Subject" class="text-danger"></span>
     </div>
-    <div class="form-group">
+    <div class="form-group my-3">
         <label for="body">Body</label>
         <textarea class="form-control" id="body" name="Body">@Model.Body</textarea>
         <span asp-validation-for="Body" class="text-danger"></span>
     </div>
     <button type="submit" class="btn btn-primary">Send</button>
 </form>
+</div>
+</div>
