--- a/MobileRechargeAppIndividual/MobileRecharge/Views/Shared/_Layout.cshtml
+++ b/MobileRechargeAppIndividual/MobileRecharge/Views/Shared/_Layout.cshtml
@@ -22,9 +22,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="MobilePlans" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="MobilePlans" asp-action="SendMail">Mailer</a>
-                        </li>
+
+                        @if (!User.IsInRole("Admin"))
+                        {
+
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="MobilePlans" asp-action="SendMail">Mailer</a>
+                        </li>}
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
