--- a/MobileRechargeAppIndividual/MobileRecharge/Views/MobilePlans/Index.cshtml
+++ b/MobileRechargeAppIndividual/MobileRecharge/Views/MobilePlans/Index.cshtml
@@ -4,21 +4,18 @@
     ViewData["Title"] = "Index";
 }
 
-
-
 @if (User.IsInRole("Admin"))
 {
-    <h1 class="mt-3">Admin Controls</h1>
+    <h1 class="my-3">Admin Controls</h1>
+    <p>
+        <a asp-action="Create" class="btn btn-primary">+ Create Plan</a>
+    </p>
 }
 else
 {
-    <h1 class="mt-3">User Plans</h1>
-
+    <h1 class="my-3">User Plans</h1>
 }
 
-<p>
-    <a asp-action="Create" class="btn btn-primary">+ Create Plan</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -37,41 +34,59 @@ else
             <th>
                 @Html.DisplayNameFor(model => model.Amount)
             </th>
+            <th>
+                @if (!User.IsInRole("Admin"))
+                {
+                    @Html.DisplayName("QR Code")
+                }
+            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-    @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ServiceProvider)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PlanName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Mode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NoOfMonths)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Amount)
-            </td>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ServiceProvider)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PlanName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Mode)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.NoOfMonths)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Amount)
+                </td>
+                <td>
+                    @if (!User.IsInRole("Admin"))
+                    {
 
-            <td>
-                @if (User.IsInRole("Admin")) {
+                        var upiLink = "upi://pay?pa=krithikanithyanandam@okhdfcbank" + "&pn=" + item.ServiceProvider + "&am=" + item.Amount + "&cu=INR";
+                        var encodedUpiLink = System.Web.HttpUtility.UrlEncode(upiLink);
+                        var imageUrl = "https://api.qrserver.com/v1/create-qr-code/?data=" + encodedUpiLink + "&amp;size=50x50&amp;bgcolor=gray";
+
+                        <img src="@imageUrl" alt="QR Code" />
+                    }
+                </td>
+                <td>
+                    @if (User.IsInRole("Admin"))
+                    {
                         <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary">Edit</a>
-@*                    <a asp-action = "Details" asp-route-id = "@item.Id"> Details </a>
-                *@                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger"> Delete </a>
-                }
-                else{
-                    <form method="post" asp-controller="MobilePlans" asp-action="Index" asp-route-id="@item.Id">
-                        <button type="submit" class="btn btn-primary">Recharge</button>
-                    </form>
-                }
-            </td>
-        </tr>
-}
+                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
+                    }
+                    else
+                    {
+                        <form method="post" asp-controller="MobilePlans" asp-action="Index" asp-route-id="@item.Id">
+                            <button type="submit" class="btn btn-primary">Recharge</button>
+                        </form>
+                    }
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
