change the column to username instead of userid

--- a/MobileRecharge/MobileRecharge/Views/Recharges/Index.cshtml
+++ b/MobileRecharge/MobileRecharge/Views/Recharges/Index.cshtml
@@ -10,7 +10,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.UserId)
+                User
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Plan)
