--- a/MobileRechargeAppIndividual/MobileRecharge/Views/MobilePlans/Create.cshtml
+++ b/MobileRechargeAppIndividual/MobileRecharge/Views/MobilePlans/Create.cshtml
@@ -27,6 +27,16 @@
                 <input asp-for="Mode" class="form-control" />
                 <span asp-validation-for="Mode" class="text-danger"></span>
             </div>
+            <div class="form-group my-1" >
+                <label asp-for="DataQuant" class="control-label"></label>
+                <input asp-for="DataQuant" class="form-control" />
+                <span asp-validation-for="DataQuant" class="text-danger"></span>
+            </div>
+            <div class="form-group my-1" >
+                <label asp-for="ServiceProviderUPI" class="control-label"></label>
+                <input asp-for="ServiceProviderUPI" class="form-control" />
+                <span asp-validation-for="ServiceProviderUPI" class="text-danger"></span>
+            </div>
             <div class="form-group my-1 " >
                 <label asp-for="NoOfMonths" class="control-label"></label>
                 <input asp-for="NoOfMonths" class="form-control" />
