--- a/MobileRechargeAppIndividual/MobileRecharge/Views/Shared/_LoginPartial.cshtml
+++ b/MobileRechargeAppIndividual/MobileRecharge/Views/Shared/_LoginPartial.cshtml
@@ -2,11 +2,17 @@
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
+
+@{
+    var user = await UserManager.GetUserAsync(User);
+    var phoneNumber = user?.PhoneNumber;
+}
+
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-            <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
+            <a class="nav-link text-light fw-bold" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Your Number: +91 @phoneNumber  </a>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
