--- a/MobileRechargeAppIndividual/MobileRecharge/Views/Home/Privacy.cshtml
+++ b/MobileRechargeAppIndividual/MobileRecharge/Views/Home/Privacy.cshtml
@@ -1,6 +1,19 @@
-﻿@{
-    ViewData["Title"] = "Privacy Policy";
-}
-<h1>@ViewData["Title"]</h1>
-
-<p>Use this page to detail your site's privacy policy.</p>
+﻿
+<h2 class="mt-3">Instructions</h2>
+<div class="card shadow ">
+    <div class="card-body">
+        <p class="card-text">Welcome to the instruction manual for our product! Here you'll find all the information you need to get started and use our product effectively. Please follow the steps below to begin:</p>
+        <ol>
+            <li>Enter your mobile number</li>
+            <li>Select your service provider from the dropdown list</li>
+            <li>Enter the amount you wish to recharge</li>
+            <li>Select the validity period of the recharge</li>
+            <li>Select the data plan that you want to activate (if applicable)</li>
+            <li>Click the "Recharge" button to proceed to the payment gateway</li>
+            <li>Enter your payment details and click "Pay Now"</li>
+            <li>After successful payment, your mobile will be recharged instantly</li>
+            <li>You will receive a confirmation message from your service provider</li>
+        </ol>
+        <p class="card-text">Note: Please make sure that you enter the correct mobile number and service provider, as recharges to incorrect numbers or providers cannot be refunded.</p>
+    </div>
+</div>
