--- a/MobileRechargeAppIndividual/MobileRecharge/Views/MobilePlans/Edit.cshtml
+++ b/MobileRechargeAppIndividual/MobileRecharge/Views/MobilePlans/Edit.cshtml
@@ -31,13 +31,23 @@
                 <input asp-for="NoOfMonths" class="form-control" />
                 <span asp-validation-for="NoOfMonths" class="text-danger"></span>
             </div>
+            <div class="form-group my-1">
+                <label asp-for="DataQuant" class="control-label"></label>
+                <input asp-for="DataQuant" class="form-control" />
+                <span asp-validation-for="DataQuant" class="text-danger"></span>
+            </div> 
+            <div class="form-group my-1">
+                <label asp-for="ServiceProviderUPI" class="control-label"></label>
+                <input asp-for="ServiceProviderUPI" class="form-control" />
+                <span asp-validation-for="ServiceProviderUPI" class="text-danger"></span>
+            </div>
             <div class="form-group my-2">
                 <label asp-for="Amount" class="control-label"></label>
                 <input asp-for="Amount" class="form-control" />
                 <span asp-validation-for="Amount" class="text-danger"></span>
             </div>
             <div class="form-group my-2">
-                <input type="submit" value="Save" class="btn btn-primary" />                <a asp-action="Index">Back to List</a>
+                <input type="submit" value="Save" class="btn btn-primary" /> <a asp-action="Index">Back to List</a>
 
             </div>
 
