--- a/MobileRechargeAppIndividual/MobileRecharge/Views/Shared/_Layout.cshtml
+++ b/MobileRechargeAppIndividual/MobileRecharge/Views/Shared/_Layout.cshtml
@@ -23,12 +23,22 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="MobilePlans" asp-action="Index">Home</a>
                         </li>
 
+
                         @if (!User.IsInRole("Admin"))
                         {
 
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="MobilePlans" asp-action="SendMail">Mailer</a>
-                        </li>}
+                        </li>
+                        <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="MobilePlans" asp-action="CustomerTransactions">Past Payments</a>
+                        </li>
+                        }
+                        else{
+                             <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="MobilePlans" asp-action="AllCustomerTransactions">Payments</a>
+                        </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
@@ -43,7 +53,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - MobileRecharge - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - MobileRecharge - <a asp-area="" asp-controller="Home" asp-action="Privacy">Instructions</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
