--- a/MobileRechargeAppIndividual/MobileRecharge/wwwroot/css/site.css
+++ b/MobileRechargeAppIndividual/MobileRecharge/wwwroot/css/site.css
@@ -85,6 +85,11 @@ a {
     color: #fff !important;
 }
 
+.btn-secondary {
+    background-color: green;
+    color: #fff !important;
+}
+
 
 
 h1, h2, h3, h4, h5, h6 {
