added mail for deletion

--- a/MobileRechargeAppIndividual/MobileRecharge/Views/Home/Privacy.cshtml
+++ b/MobileRechargeAppIndividual/MobileRecharge/Views/Home/Privacy.cshtml
@@ -1,11 +1,15 @@
 ﻿
-<h2 class="mt-3">Instructions</h2>
-<div class="card shadow ">
+<div class="row justify-content-center">
+
+    <div class="card shadow text-white fw-bold col-md-7 my-3">
+      
     <div class="card-body">
+            <h2 >Instructions</h2>
+            <hr />
         <p class="card-text">Welcome to the instruction manual for our product! Here you'll find all the information you need to get started and use our product effectively. Please follow the steps below to begin:</p>
         <ol>
-            <li>Enter your mobile number</li>
-            <li>Select your service provider from the dropdown list</li>
+            <li>Login to the application</li>
+            <li>Select your service provider from the plans provider</li>
             <li>Enter the amount you wish to recharge</li>
             <li>Select the validity period of the recharge</li>
             <li>Select the data plan that you want to activate (if applicable)</li>
@@ -15,5 +19,6 @@
             <li>You will receive a confirmation message from your service provider</li>
         </ol>
         <p class="card-text">Note: Please make sure that you enter the correct mobile number and service provider, as recharges to incorrect numbers or providers cannot be refunded.</p>
+    </div>
     </div>
 </div>
