--- a/MobileRechargeAppIndividual/MobileRecharge/Views/MobilePlans/AllCustomerTransactions.cshtml
+++ b/MobileRechargeAppIndividual/MobileRecharge/Views/MobilePlans/AllCustomerTransactions.cshtml
@@ -12,6 +12,8 @@ else
                 <th>Amount</th>
                 <th>Plan Name</th>
                 <th>Validity</th>
+                <th>Date of Recharge</th>
+
             </tr>
         </thead>
         <tbody>
@@ -23,6 +25,8 @@ else
 *@                    <td>@result.MobilePlan.Amount</td>
                     <td>@result.MobilePlan.PlanName</td>
                     <td>@result.MobilePlan.NoOfMonths months</td>
+                    <td>@result.Recharge.DateCreated.ToString("dd-MM-yyyy")</td>
+
                 </tr>
             }
         </tbody>
