--- a/MobileRechargeAppIndividual/MobileRecharge/Views/Shared/_LoginPartial.cshtml
+++ b/MobileRechargeAppIndividual/MobileRecharge/Views/Shared/_LoginPartial.cshtml
@@ -10,10 +10,12 @@
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
-{
-    <li class="nav-item">
-            <a class="nav-link text-light fw-bold" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Your Number: +91 @phoneNumber  </a>
-    </li>
+    {@if (!User.IsInRole("Admin"))
+        {
+            <li class="nav-item">
+                <a class="nav-link text-light fw-bold" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Your Number: +91 @phoneNumber  </a>
+            </li>
+        }
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                 <button type="submit" class="nav-link btn btn-link text-light">Logout</button>
