--- a/LiveTextEditorApp/LiveTextEditorApp/Views/DocumentModels/Create.cshtml
+++ b/LiveTextEditorApp/LiveTextEditorApp/Views/DocumentModels/Create.cshtml
@@ -4,43 +4,6 @@
     ViewData["Title"] = "Create";
 }
 
-@*<h1>Create</h1>
-
-<h4>DocumentModel</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Content" class="control-label"></label>
-                <input asp-for="Content" class="form-control" />
-                <span asp-validation-for="Content" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <input asp-for="UserId" class="form-control" />
-                <span asp-validation-for="UserId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
-
-*@
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -51,24 +14,31 @@
     <div class="container">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
+            <div class="d-flex justify-content-between align-items-center my-3">
+                <div class="form-group my-2">
+                    <label asp-for="Title" class="control-label"></label>
+                    <input asp-for="Title" class="form-control" value="New Doc"/>
+                    <span asp-validation-for="Title" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-primary" />
+                </div>
             </div>
-            <div class="form-group">
+          
+            
+           
+            <div class="form-group my-2">
                 <label asp-for="Content" class="control-label"></label>
                 <textarea asp-for="Content" class="form-control" ></textarea>
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
           
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
+          
         </form>
 
     </div>
-    </div>
+    
 
     <script src="https://cdn.tiny.cloud/1/bmes6jer1hwluio0gcbdtnzf04rvsd3p291lrj28lcmxse5s/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
     <script type="text/javascript">
