--- a/LiveTextEditorApp/LiveTextEditorApp/Views/DocumentModels/Index.cshtml
+++ b/LiveTextEditorApp/LiveTextEditorApp/Views/DocumentModels/Index.cshtml
@@ -4,13 +4,15 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 
-<div class="row">
+<div class="row ">
+    <div class="d-flex justify-content-between align-items-center my-3">
+        <h1>Your Docs</h1>
+        <p>
+            <a asp-action="Create" class="btn btn-secondary border-0">+ Create New</a>
+        </p>
+    </div>
     @foreach (var item in Model)
     {
         <div class="col-md-4">
@@ -18,9 +20,9 @@
                 <div class="card-body">
                     <h3 class="card-title mb-3">@Html.DisplayFor(modelItem => item.Title)</h3>
                     @*<p class="card-text">@Html.DisplayFor(modelItem => item.UserId)</p>*@
-                    <a href="@Url.Action("Edit", new { id = item.Id })" class="btn btn-primary">Edit</a>
-                    <a href="@Url.Action("Details", new { id = item.Id })" class="btn btn-secondary">Details</a>
-                    <a href="@Url.Action("Delete", new { id = item.Id })" class="btn btn-danger">Delete</a>
+                    <a href="@Url.Action("Edit", new { id = item.Id })" class="btn btn-primary border-0">Edit</a>
+                    <a href="@Url.Action("Details", new { id = item.Id })" class="btn btn-secondary border-0">Details</a>
+                    <a href="@Url.Action("Delete", new { id = item.Id })" class="btn btn-danger border-0">Delete</a>
                 </div>
             </div>
         </div>
