--- a/LiveTextEditorApp/LiveTextEditorApp/wwwroot/css/site.css
+++ b/LiveTextEditorApp/LiveTextEditorApp/wwwroot/css/site.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800;900&display=swap');
 
 html {
   font-size: 14px;
@@ -23,16 +23,22 @@ html {
 }
 
 body {
-    font-family: 'Poppins', Arial;
+    font-family: 'Raleway', Arial;
     margin-bottom: 60px;
     background-color: rgba(230, 230, 230, 0.311);
     background-image: linear-gradient(90deg, rgba(219, 219, 219, 0.187) 50%, transparent 50%), linear-gradient(rgba(215, 215, 215, 0.167) 50%, transparent 50%);
     background-size: 10px 10px;
 }
 
-.card-title, button, .btn, a {
+.card-title, button, .btn {
     font-family: 'Caveat', cursive !important;
     text-decoration:none;
+}
+a {
+    font-family: 'Caveat', cursive !important;
+    text-decoration: none;
+ 
+    font-weight:bold ;
 }
 
 .btn-primary{
@@ -77,7 +83,45 @@ body {
         z-index: -1;
     }
 
+
+
+.custom-card {
+    background-color: #11bcb2;
+    box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    margin-bottom: 20px;
+    padding: 15px;
+    position: relative;
+}
+        .custom-card a {
+            color: white !important;
+            text-decoration: none;
+        }
+    .custom-card::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 10px;
+        background: #11bcb2;
+        border-radius: 5px 5px 0 0;
+    }
+
+    .custom-card::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: #11bcb2;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        z-index: -1;
+    }
+
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Poppins', Arial;
-    font-weight:bolder;
+    font-family: 'Raleway', Arial;
+    font-weight: bolder;
 }
